Works. Nice and smart API class. The package cycles between today and tomorrow. New variables to control api refresh times and ui refresh time and README updated. Reinstated broken styles. Overall better code. [BROKEN] settings change now require atom to refresh, must fix. project could use better handling of null and default values #7

--- a/styles/atom-metaweather.less
+++ b/styles/atom-metaweather.less
@@ -17,7 +17,12 @@
 
 .atom-metaweather {
     color: @text-color;
-    .location.title { color: @mw-color-base; }
+    .location {
+        .title {
+            color: @mw-color-base;
+            font-weight: bold;
+        }
+    }
 
     .stats {
 
